--- a/Timer Page/style_e.css
+++ b/Timer Page/style_e.css
@@ -47,7 +47,8 @@ input {
 .switch-field {
     font-family: "Roboto", Tahoma, Verdana, sans-serif;
     font-weight: bold;
-    font-size: 2.5vw;
+    font-size: 2.1vw;
+    text-align: center;
     overflow: hidden;
     width: 50%;
     margin: auto;
@@ -65,11 +66,11 @@ input {
     border: 0;
     overflow: hidden;
 }
-
+/*
 .switch-field label {
   float: left;
 }
-
+*/
 .switch-field label {
   display: inline-block;
   width: auto;
@@ -77,7 +78,7 @@ input {
   color: rgba(0, 0, 0, 0.6);
   font-size: 2vw;
     font-family: 'Roboto', sans-serif;
-    font-size: 2.4vw;
+    font-size: 2.1vw;
   font-weight: bold;
   text-align: center;
   text-shadow: none;
